--- a/src/components/projectSidebar/projectSidebar.css
+++ b/src/components/projectSidebar/projectSidebar.css
@@ -1,7 +1,18 @@
+a::before {
+  width: 0;
+  height: 0;
+}
+
 .sidebar {
   margin: 0;
   padding: 0;
   border-right: 1px solid black;
+}
+
+.sidebar-item {
+  display: flex;
+  flex-flow: row, nowrap;
+  justify-content: space-between;
 }
 
 .nav-item {
